# gui-dice-simulation

./: README.md
dice-simulation/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
